First pass at writing Engine.